--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div class="col-md-4">
                     <div class="contact-info">
                         <a href="tel:+989372929651"><i class="fas fa-phone"></i>+98 937 292 9651</a>
-                        <a href="mailto:alirezasaramiii@gmail.com"><i class="fas fa-envelope"></i>alirezasaramiii@gmail.com</a>
+                        <a href="mailto:alirezasaramiii@gmail.com"><i class="fas fa-envelope"></i>Email</a>
                         <a href="https://www.linkedin.com/in/alireza-sarami/" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
                         <a href="https://github.com/alirezasarami" target="_blank"><i class="fab fa-github"></i>GitHub</a>
                     </div>
